<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sap2"
    tools:context="com.example.poyyamozhi.design.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="260dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:weightSum="5">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="fill"
                    android:maxLines="1"
                    android:text="@string/my"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hotel"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="-12dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/stay"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stay"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="-7dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="center_vertical"
                    android:text="@string/hotel" />
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_below="@id/linear"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape"
                android:elevation="35dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:translationZ="15dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#298bf7"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>