<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sap2"
    tools:context="com.example.poyyamozhi.design.SecondActivity">

    <android.support.v7.widget.CardView
        android:layout_width="280dp"
        android:layout_height="480dp"
        android:layout_centerInParent="true"
        android:background="#dfdfdf"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/stock2"
                    android:transitionName="@string/next"
                    app:riv_corner_radius_top_left="15dp"
                    app:riv_corner_radius_top_right="15dp"
                    app:riv_mutate_background="true" />
            </RelativeLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/relative"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-10dp"
                android:background="@drawable/circle"
                android:elevation="5dp"
                android:src="@drawable/ic_favorite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/udaipur"
                    android:textColor="#e98006"
                    android:textSize="16sp" />

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="5"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:theme="@style/RatingBar"
                    android:transformPivotX="0dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="-12dp"
                    android:background="#dfdfdf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/dates"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/dates2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="#dfdfdf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/guest"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/person"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="#dfdfdf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/price"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/price2"
                    android:textColor="#e98006"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="#dfdfdf" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:elevation="5dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:translationZ="15dp" />

</RelativeLayout>
