<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sap2"
    tools:context="com.example.poyyamozhi.design.ThirdActivity">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="480dp"
        android:layout_centerInParent="true"
        android:background="#dfdfdf"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/stock2"
                    android:transitionName="@string/next"
                    app:riv_corner_radius_top_left="15dp"
                    app:riv_corner_radius_top_right="15dp"
                    app:riv_mutate_background="true" />

            </RelativeLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/relative"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-10dp"
                android:background="@drawable/circle"
                android:elevation="5dp"
                android:src="@drawable/ic_favorite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab"
                    android:text="@string/udaipur"
                    android:textColor="#e98006"
                    android:textSize="16sp" />

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="5"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:theme="@style/RatingBar"
                    android:transformPivotX="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/location"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/booknow"
                            android:src="@drawable/ic_location_on" />

                        <TextView
                            android:id="@+id/locationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_toEndOf="@id/location"
                            android:layout_toRightOf="@id/location"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/distance2"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/distanceText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/locationText"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_toEndOf="@id/location"
                            android:layout_toRightOf="@id/location"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/distance"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/location2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/booknow" />

                        <TextView
                            android:id="@+id/locationText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_toEndOf="@id/location2"
                            android:layout_toRightOf="@id/location2"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/price3"
                            android:textColor="#e98006"
                            android:textSize="18sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/distanceText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/locationText2"
                            android:layout_marginLeft="3dp"
                            android:layout_marginTop="5dp"
                            android:layout_toRightOf="@id/location2"
                            android:fontFamily="@font/roboto_slab"
                            android:text="@string/perday"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape"
        android:elevation="15dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/booknow"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:translationZ="15dp" />
</RelativeLayout>
